# HvcNope

./: HvcNope.sln
Converter/: Converter.vcxproj  Converter.vcxproj.filters  KernelFunctionConsumer.cpp  KernelFunctionConsumer.h  Main.cpp  OutputAction.cpp  OutputAction.h  ReplaceIntrinisicsConsumer.cpp  ReplaceIntrinisicsConsumer.h  Test.cpp  ToolConfiguration.cpp  ToolConfiguration.h  Utils.cpp  Utils.h  pch.h
Converter/a/: hello.h
Demo/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.py
Demo/kernel/: attrs.h  functions.h  objects.h  types.h
HvcNope/: ByteSignature.cpp  ByteSignature.h  CallFunction.h  Globals.h  HvcNope.vcxproj  HvcNope.vcxproj.filters  Hvcnope.cpp  Hvcnope.h  IKernelReadWrite.hpp  Intrinsics.cpp  Intrinsics.h  KOffsetManager.cpp  KOffsetManager.h  KernelBinary.cpp  KernelBinary.h  KernelPtr.h  KernelReadWrite.h  Log.cpp  Log.h  Main.cpp  MockDriver.cpp  MockDriver.h  Nt.h  Offsets.h  PointerGenerator.cpp  PointerGenerator.h  PoolFlags.h  PromotedReadWrite.h  Resolves.cpp  Resolves.h  Truesight.h  Types.h  Utils.cpp  Utils.h
HvcNope/kernel/: functions.h  types.h
MockDriver/: Main.cpp  MockDriver.inf  MockDriver.vcxproj  MockDriver.vcxproj.filters
RemapDriver/: Main.cpp  RemapDriver.vcxproj
